Style fix on mobile

--- a/wp-content/themes/portfolio/css/header/index.scss
+++ b/wp-content/themes/portfolio/css/header/index.scss
@@ -234,7 +234,7 @@
     box-shadow: 0 5px 20px #808080;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow: hidden !important;
     height: 13em;
 
     &:hover {
